--- a/config.conf
+++ b/config.conf
@@ -1,9 +1,9 @@
 #对应3.1.2 以上
 [path]
-packer_path = C:/Program Files (x86)/CodeAndWeb/TexturePacker/bin/TexturePacker.exe
-orgimg_path = G:/job/mine/proj/implement/packageImg
-output_path = G:/job/mine/proj/implement/pvr
-project_path = G:/job/mine/proj/implement/game_maiden/dcBall/res/images
+
+packer_path = D:/Program Files/CodeAndWeb/TexturePacker/bin/TexturePacker.exe
+orgimg_path = E:/of_proj/StarCraft_plan/Image/starCraftUI
+
 
 [help]
 help = false
@@ -25,7 +25,7 @@ texture_sheet = pvr.ccz
 # webp              WebP lossless / lossy format
 # atf               Adobe Texture Format
 
-format = cocos2d
+format = cocos2d-x
 # 2dtoolkit           2D Toolkit exporter
 # andengine           Format for AndEngine
 # agk                 Format for AppGameKit
